--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@chakra-ui/icons": "^2.2.4",
+        "@chakra-ui/react": "^2.10.9",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.1.4",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -44,10 +48,12 @@
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.2.0",
         "@types/react-dom": "^19.2.0",
+        "@types/styled-components": "^5.1.35",
         "@vitejs/plugin-react": "^5.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "framer-motion": "^12.23.24",
         "globals": "^15.14.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
@@ -58,7 +64,8 @@
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.7.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "zustand": "^5.0.8"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
